// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`masterchain should deploy to the workchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDSuAQHFrqpJA5TD7sDh45U7-bg76NNNfmaX7AID1bdlWiE",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3823n,
      },
    ],
  },
]
`;

exports[`masterchain should deploy to the workchain from masterchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDODwXkLheXHjo3o0OlxiKH0j0uyVUq4US8ZHZkeHjcWl8D",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3687n,
      },
    ],
  },
]
`;

exports[`masterchain should deploy to the workchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDODwXkLheXHjo3o0OlxiKH0j0uyVUq4US8ZHZkeHjcWl8D",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3687n,
      },
    ],
  },
]
`;

exports[`masterchain should not deploy to the workchain from masterchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDSuAQHFrqpJA5TD7sDh45U7-bg76NNNfmaX7AID1bdlWiE",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 137,
        "errorMessage": "Masterchain support is not enabled for this contract",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000004465706C6F79}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQDSuAQHFrqpJA5TD7sDh45U7-bg76NNNfmaX7AID1bdlWiE",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.989",
        },
      },
    ],
  },
]
`;
